<resources>
    <string name="app_name">Vocab Manager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_course">Course</string>
    <string name="title_lesson">Lesson</string>
    <string name="title_vocab">Vocab</string>
    <string name="tv_hint_search">Search…</string>
    <string name="tv_hint_created">Created</string>
    <string name="action_bar_hint_add">Add</string>
    <string name="tv_hint_course_name">Course name</string>
    <string name="tv_hint_course_description">Course description</string>
    <string name="radio_active">Active</string>
    <string name="radio_de_active">De-Active</string>
    <string name="btn_hint_ok">OK</string>
    <string name="btn_hint_cancel">Cancel</string>
    <string name="tv_hint_course_name_must_not_be_empty">Course name must not be empty</string>
    <string name="tv_hint_course_description_must_not_be_empty">Course description must not be empty</string>
    <string name="resp_success">Success</string>
    <string name="resp_course_has_lessons">Course has lessons</string>
    <string name="resp_lesson_has_vocabs">Lesson has vocabularies</string>
    <string name="resp_some_courses_use_this_status">Some courses use this status</string>
    <string name="resp_some_lessons_use_this_status">Some lessons use this status</string>
    <string name="resp_some_vocabs_use_this_type">Some vocabularies use this type</string>
    <string name="resp_status_not_exist">Status doesn\'t exist</string>
    <string name="resp_course_not_exist">Course doesn\'t exist</string>
    <string name="resp_lesson_not_exist">Lesson doesn\'t exist</string>
    <string name="resp_type_not_exist">Type doesn\'t exist</string>
    <string name="resp_host_db_error">Host database got issue</string>
    <string name="resp_unknown_error">Unknown error</string>
    <string name="dialog_title_add_course">Add course</string>
    <string name="tv_hint_add">Add</string>
    <string name="tv_hint_successfully">Successfully</string>
    <string name="tv_hint_success">Success</string>
    <string name="tv_hint_connection_failed">Connection failed</string>
    <string name="tv_hint_connection_timeout">Connection timeout</string>
    <string name="tv_hint_error">Error</string>
    <string name="dialog_title_del_course">Delete course</string>
    <string name="dialog_do_you_want_to_delete">Do you want to delete</string>
    <string name="tv_hint_delete">Delete</string>
    <string name="btn_hint_update">Update</string>
    <string name="tv_hint_update">Update</string>
    <string name="tv_hint_all_courses">All courses</string>
    <string name="tv_hint_all_dates">All dates</string>
    <string name="data_status_active">Active</string>
    <string name="data_status_de_active">De-Active</string>
    <string name="tv_hint_status">Status</string>
    <string name="tv_hint_all_status">All status</string>
    <string name="tv_hint_lesson_name_must_not_be_empty">Lesson name must not be empty</string>
    <string name="tv_hint_lesson_name">Lesson name</string>
    <string name="dialog_title_del_lesson">Delete lesson</string>
    <string name="title_pos">Parts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_hint_pos_name">Part of speech</string>
    <string name="tv_hint_pos_name_must_not_be_empty">Part of speech description must not be empty</string>
    <string name="dialog_title_del_pos">Delete part of speech</string>
    <string name="tv_hint_all_lessons">All lessons</string>
    <string name="tv_hint_all_pos">All parts</string>
    <string name="tv_hint_vocab_en">En</string>
    <string name="tv_hint_vocab_en_must_not_be_empty">Vocab in EN must not be empty</string>
    <string name="tv_hint_vocab_ipa">IPA</string>
    <string name="tv_hint_vocab_ipa_must_not_be_empty">IPA must not be empty</string>
    <string name="tv_hint_vocab_desc">Description</string>
    <string name="tv_hint_vocab_desc_must_not_be_empty">Vocab description must not be empty</string>
    <string name="tv_hint_vocab_vi">Vi</string>
    <string name="tv_hint_vocab_vi_must_not_be_empty">VI must not be empty</string>
    <string name="tv_hint_vocab_pos">Part of speech</string>
    <string name="tv_hint_vocab_pos_must_not_be_empty">Part of speech must not be empty</string>
    <string name="tv_hint_vocab_sound">Vocab sound</string>
    <string name="tv_hint_vocab_sound_must_not_be_empty">Vocab sound must not be empty</string>
    <string name="btn_hint_choose">Choose</string>
    <string name="dialog_title_del_vocab">Delete vocab</string>
</resources>