<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/txt_vocab_en"
                android:text="@string/tv_hint_vocab_en"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_vocab_en_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/txt_vocab_en"
                android:text="@string/tv_hint_vocab_en_must_not_be_empty"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/txt_vocab_en"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_en_status"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:labelFor="@id/txt_vocab_ipa"
                android:text="@string/tv_hint_vocab_ipa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_en" />

            <TextView
                android:id="@+id/txt_vocab_ipa_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/txt_vocab_ipa"
                android:text="@string/tv_hint_vocab_ipa_must_not_be_empty"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/txt_vocab_ipa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_ipa_status"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:labelFor="@id/txt_vocab_desc"
                android:text="@string/tv_hint_vocab_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_ipa" />

            <TextView
                android:id="@+id/txt_vocab_desc_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/txt_vocab_desc"
                android:text="@string/tv_hint_vocab_desc_must_not_be_empty"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/txt_vocab_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="200"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_desc_status"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:labelFor="@id/txt_vocab_vi"
                android:text="@string/tv_hint_vocab_vi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_desc" />

            <TextView
                android:id="@+id/txt_vocab_vi_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/txt_vocab_vi"
                android:text="@string/tv_hint_vocab_vi_must_not_be_empty"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/txt_vocab_vi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_vi_status"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />


            <TextView
                android:id="@+id/txt_vocab_pos_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:labelFor="@id/spinner_pos"
                android:text="@string/tv_hint_vocab_pos_must_not_be_empty"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_sound" />

            <Spinner
                android:id="@+id/spinner_pos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_pos_status"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:labelFor="@id/txt_vocab_sound"
                android:text="@string/tv_hint_vocab_sound"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_vi" />

            <TextView
                android:id="@+id/txt_vocab_sound_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/txt_vocab_sound"
                android:text="@string/tv_hint_vocab_sound_must_not_be_empty"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/txt_vocab_sound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:maxLength="200"
                android:maxLines="1"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_choose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_sound_status"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btn_choose"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="@color/gray_btn_bg_color"
                android:scaleType="fitCenter"
                android:text="@string/btn_hint_choose"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/btn_sound"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_sound_status"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_sound"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_volume_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_sound_status"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/txt_vocab_lesson_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:labelFor="@id/spinner_lesson"
                android:text="@string/tv_hint_lesson_name_must_not_be_empty"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_pos" />

            <Spinner
                android:id="@+id/spinner_lesson"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_vocab_lesson_status"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/txt_global_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tv_hint_course_description_must_not_be_empty"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_lesson" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_hint_ok"
                app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_global_status" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="200dp"
                android:text="@string/btn_hint_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_ok"
                app:layout_constraintTop_toTopOf="@+id/btn_ok" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/processing_circle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</FrameLayout>